changes: - change selectedEntity to selectedExemption - add class Exemption - add orphan_exemption_page - add exemption_details - right now just error message

--- a/open-budget/app/index.html
+++ b/open-budget/app/index.html
@@ -277,7 +277,9 @@
                 <div class="latest-updates center-block col-sm-3 fill">
                 </div>
 
-                <div class="entity-details center-block col-sm-9">
+                <div class="center-block col-sm-9">
+                    <div class="orphan-exemption-page"></div>
+                    <div class="entity-details"></div>
                 </div>
             </article>
 
@@ -424,6 +426,7 @@
         <script src="scripts/single_changegroup.js"></script>
         <script src="scripts/entity_details.js"></script>
         <script src="scripts/spendings_page.js"></script>
+        <script src="scripts/orphan_exemption_page.js"></script>
         <script src="scripts/breadcrumb_header.js"></script>
         <script src="scripts/analysis_header.js"></script>
         <script src="scripts/bubble_chart.js"></script>
